NEW LOOK :heart:

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Hitanshu Dhawan</title>
-</head>
-<body>
+    <head>
+        <title>Hitanshu Dhawan</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    </head>
+    <body>
 
-<h1>Hitanshu Dhawan</h1>
+        <div class="profile-box">
+            <img src="images/profile_pic.jpg" border="2" class="profile-pic">
+            <h1>Hitanshu Dhawan</h1>
+            <h3>judge me by my works and not by my words</h3>
 
-<a href="https://www.facebook.com/dhawan.hitanshu" target="_blank">Facebook</a>
-<a href="https://www.instagram.com/hitanshu.dhawan" target="_blank">Instagram</a>
-<a href="https://www.quora.com/profile/Hitanshu-Dhawan-1" target="_blank">Quora</a>
-<a href="https://www.linkedin.com/in/hitanshu-dhawan/" target="_blank">LinkedIn</a>
-<a href="https://github.com/hitanshu-dhawan" target="_blank">Github</a>
-<a href="https://www.hackerrank.com/hitanshu_dhawan" target="_blank">HackerRank</a>
-<a href="https://www.hackerearth.com/@hitanshu_dhawan" target="_blank">HackerEarth</a>
-<a href="http://www.spoj.com/users/hitanshu/" target="_blank">SPOJ</a>
-<a href="https://www.codechef.com/users/hitanshudh" target="_blank">CodeChef</a>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/hitanshu-dhawan/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://github.com/hitanshu-dhawan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://www.quora.com/profile/Hitanshu-Dhawan-1" target="_blank"><i class="fa fa-quora" aria-hidden="true"></i></a>
+                <a href="mailto:hitanshudhawan1996@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+            </div>
+        </div>
 
-</body>
+    </body>
 </html>
