--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <a href="https://www.quora.com/profile/Hitanshu-Dhawan-1" target="_blank"><i class="fa fa-quora" aria-hidden="true"></i></a>
                 <a href="mailto:hitanshudhawan1996@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
             </div>
+
+            <a href="files/HitanshuDhawanResume.pdf" target="_blank"><h4>Résumé</h4></a>
         </div>
 
     </body>
