new look COMING SOON

--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
             <a href="files/HitanshuDhawanResume.pdf" target="_blank"><h4>Résumé</h4></a>
         </div>
 
+        <p>new LOOK of website COMMING SOON</p>
+
     </body>
 </html>
