initial website layout

--- a/index.html
+++ b/index.html
@@ -2,28 +2,54 @@
 <html>
     <head>
         <title>Hitanshu Dhawan</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="icon" type="img/ico" href="images/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="css/master.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+        <script src="js/bootstrap.js"></script>
     </head>
     <body>
 
-        <div class="profile-box">
-            <img src="images/profile_pic.jpg" border="2" class="profile-pic">
-            <h1>Hitanshu Dhawan</h1>
-            <h3>judge me by my works and not by my words</h3>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
 
-            <div class="social-links">
-                <a href="https://www.linkedin.com/in/hitanshu-dhawan/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href="https://github.com/hitanshu-dhawan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                <a href="https://play.google.com/store/apps/developer?id=Hitanshu+Dhawan" target="_blank"><i class="fa fa-play" aria-hidden="true"></i></a>
-                <a href="https://www.quora.com/profile/Hitanshu-Dhawan-1" target="_blank"><i class="fa fa-quora" aria-hidden="true"></i></a>
-                <a href="mailto:hitanshudhawan1996@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                <div class="navbar-header">
+                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#collapseNavbar" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html">Hitanshu Dhawan</a>
+                </div>
+
+                <div id="collapseNavbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="files/HitanshuDhawanResume.pdf">Résumé</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About Me</a></li>
+                    </ul>
+                </div>
+
             </div>
+        </nav>
 
-            <a href="files/HitanshuDhawanResume.pdf" target="_blank"><h4>Résumé</h4></a>
+        <div id="profile-box" class="centre">
+            <img id="profile-pic" src="images/profile_pic.jpg">
+                <h1>Hitanshu Dhawan</h1>
+                <div class="typewriter">
+                    <p>judge me by my <span>works</span>, not by my <span>words</span></p>
+                </div>
+            <br>
+            <a href="https://www.facebook.com/dhawan.hitanshu" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/hitanshu-dhawan/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://github.com/hitanshu-dhawan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <a href="https://www.quora.com/profile/Hitanshu-Dhawan-1" target="_blank"><i class="fa fa-quora" aria-hidden="true"></i></a>
+            <a href="mailto:hitanshudhawan1996@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
         </div>
-
-        <p>new LOOK of website COMMING SOON</p>
 
     </body>
 </html>
