added g-play link and background

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             </div>
         </nav>
 
+        <br>
+
         <div id="profile-box" class="centre">
             <img id="profile-pic" src="images/profile_pic.jpg">
                 <h1>Hitanshu Dhawan</h1>
@@ -45,11 +47,16 @@
                 </div>
             <br>
             <a href="https://www.facebook.com/dhawan.hitanshu" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/hitanshu.dhawan/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://www.linkedin.com/in/hitanshu-dhawan/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             <a href="https://github.com/hitanshu-dhawan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <a href="https://play.google.com/store/apps/developer?id=Hitanshu+Dhawan" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a>
             <a href="https://www.quora.com/profile/Hitanshu-Dhawan-1" target="_blank"><i class="fa fa-quora" aria-hidden="true"></i></a>
             <a href="mailto:hitanshudhawan1996@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
         </div>
+
+        <!--  -->
+
 
     </body>
 </html>
