--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 
         <br>
 
+        <div id="index-particles"></div>
+        <script src="js/particles.js"></script>
+        <script src="js/index_particles.js"></script>
         <div id="profile-box" class="centre">
             <img id="profile-pic" src="images/profile_pic.jpg">
-                <h1>Hitanshu Dhawan</h1>
-                <div class="typewriter">
-                    <p>judge me by my <span>works</span>, not by my <span>words</span></p>
-                </div>
+            <h1>Hitanshu Dhawan</h1>
+            <div class="typewriter">
+                <p>judge me by my <span>works</span>, not by my <span>words</span></p>
+            </div>
             <br>
             <a href="https://www.facebook.com/dhawan.hitanshu" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com/hitanshu.dhawan/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -55,8 +58,9 @@
             <a href="mailto:hitanshudhawan1996@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
         </div>
 
-        <!--  -->
+        <br><br><br><br>
 
+        <!--  -->
 
     </body>
 </html>
