add technologies section (typed.js)

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
         <br><br><br><br><br><br>
 
         <div id="technologies">
+            <span id="typed"></span>
+            <script>
+                var typed = new Typed('#typed', {
+                    strings: ["I &#10084; Programming", "I &#10084; Android", "I &#10084; Python", "I &#10084; HTML", "I &#10084; CSS", "I &#10084; JavaScript", "I &#10084; C/C++", "I &#10084; Java"],
+                    typeSpeed: 100,
+                    backSpeed: 100,
+                    backDelay: 1000,
+                    smartBackspace: true,
+                    loop: true
+                });
+            </script>
             <div id="scene">
                 <div id="js-image" data-depth="1.2"><img src="images/js.png" width="150px"></div>
                 <div id="css-image" data-depth="1.0"><img src="images/css.png" width="150px"></div>
@@ -80,22 +91,7 @@
             </script>
         </div>
 
-
-
-
-
-        <!-- <span id="typed"></span>
-        <script>
-            var typed = new Typed('#typed', {
-                strings: ["I'm an Android Developer","I'm a Web Developer"],
-                typeSpeed: 100,
-                backSpeed: 100,
-                backDelay: 1000,
-                smartBackspace: true,
-                loop: true
-            });
-        </script> -->
-
+        <!--  -->
 
     </body>
 </html>
