--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,800">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="css/master.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type="text/javascript" src="js/typed.js"></script>
@@ -16,7 +16,6 @@
 
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
-
                 <div class="navbar-header">
                     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#collapseNavbar" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
@@ -26,16 +25,14 @@
                     </button>
                     <a class="navbar-brand" href="index.html"><strong>Hitanshu Dhawan</strong></a>
                 </div>
-
                 <div id="collapseNavbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="files/HitanshuDhawanResume.pdf" target="_blank">Résumé</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">About Me</a></li>
                     </ul>
                 </div>
-
             </div>
         </nav>
 
@@ -67,6 +64,7 @@
             <script>
                 var typed = new Typed('#typed', {
                     strings: ["I &#10084; Programming", "I &#10084; Android", "I &#10084; Python", "I &#10084; HTML", "I &#10084; CSS", "I &#10084; JavaScript", "I &#10084; C/C++", "I &#10084; Java"],
+                    showCursor: false,
                     typeSpeed: 100,
                     backSpeed: 100,
                     backDelay: 1000,
@@ -74,6 +72,7 @@
                     loop: true
                 });
             </script>
+            <br><br><br>
             <div id="scene">
                 <div id="js-image" data-depth="1.2"><img src="images/js.png" width="150px"></div>
                 <div id="css-image" data-depth="1.0"><img src="images/css.png" width="150px"></div>
@@ -92,6 +91,8 @@
         </div>
 
         <!--  -->
+
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     </body>
 </html>
