projects.html done :tada:

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Hitanshu Dhawan</title>
-        <link rel="icon" type="img/ico" href="/images/favicon.ico">
+        <link rel="icon" type="img/ico" href="/images/index/favicon.ico">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,800">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,7 +42,7 @@
         <script src="js/index_particles.js"></script>
 
         <div id="profile-box" class="centre">
-            <img id="profile-pic" src="/images/profile_pic.jpg">
+            <img id="profile-pic" src="/images/index/profile_pic.jpg">
             <h1>Hitanshu Dhawan</h1>
             <div class="typewriter">
                 <p>judge me by my <span>works</span>, not by my <span>words</span></p>
@@ -72,11 +72,11 @@
             </script>
             <br><br><br>
             <div id="scene">
-                <div id="js-image" data-depth="1.2"><img src="/images/js.png" width="150px"></div>
-                <div id="css-image" data-depth="1.0"><img src="/images/css.png" width="150px"></div>
-                <div id="html-image" data-depth="0.8"><img src="/images/html.png" width="200px"></div>
-                <div id="python-image" data-depth="-0.2"><img src="/images/python.png" width="200px"></div>
-                <div id="android-image" data-depth="0.5"><img src="/images/android.png"></div>
+                <div id="js-image" data-depth="1.2"><img src="/images/index/js.png" width="150px"></div>
+                <div id="css-image" data-depth="1.0"><img src="/images/index/css.png" width="150px"></div>
+                <div id="html-image" data-depth="0.8"><img src="/images/index/html.png" width="200px"></div>
+                <div id="python-image" data-depth="-0.2"><img src="/images/index/python.png" width="200px"></div>
+                <div id="android-image" data-depth="0.5"><img src="/images/index/android.png"></div>
             </div>
             <script type="text/javascript">
                 var scene = document.querySelector("#scene");
@@ -89,15 +89,16 @@
         </div>
 
         <div id="projects">
-            <img id="github-logo" src="/images/octocat.png">
+            <img id="github-logo" src="/images/index/octocat.png">
             <div id="projects-text">
-                <h1>I like to make stuff with my code.</h1>
+                <h1>I like to make cool stuff with my code.</h1>
                 <h3>check out my <span><a href="projects.html">projects</a></span>...</h3>
             </div>
         </div>
 
         <div id="about-me" class="container">
             <h1 class="centre">About Me</h1>
+            <!-- TODO: write about yourself bro -->
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <ul>
                 <li>a</li>
