--- a/projects.html
+++ b/projects.html
@@ -28,18 +28,115 @@
                         <li class="active"><a href="projects.html">Projects</a></li>
                         <li><a href="files/HitanshuDhawanResume.pdf" target="_blank">Résumé</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">About Me</a></li>
+                        <li><a href="index.html#about-me">About Me</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
+        <div id="projects">
 
+            <a href="https://play.google.com/store/apps/details?id=com.hitanshudhawan.popcorn" target="_blank">
+            <div class="container list-item">
+                <img src="/images/projects/popcorn.png">
+                <div>
+                    <h1>PopCorn</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <a href="https://github.com/hitanshu-dhawan/Todo" target="_blank">
+            <div class="container list-item">
+                <!-- <img src=""> -->
+                <div>
+                    <h1>Todo</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
 
+            <a href="https://github.com/hitanshu-dhawan/ImageSteganography" target="_blank">
+            <div class="container list-item">
+                <img src="/images/projects/imagestegno.png">
+                <div>
+                    <h1>Image​ ​Steganography</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
 
+            <a href="https://github.com/hitanshu-dhawan/TicTacToeAI" target="_blank">
+            <div class="container list-item">
+                <img src="/images/projects/tictactoe.png">
+                <div>
+                    <h1>Ultimate​ ​TicTacToe</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
 
+            <a href="http://hitanshudhawan.com/10PRINT/" target="_blank">
+            <div class="container list-item">
+                <img src="/images/projects/10print.gif">
+                <div>
+                    <h1>10PRINT</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
+
+            <a href="https://github.com/hitanshu-dhawan/BrainfuckCompiler" target="_blank">
+            <div class="container list-item">
+                <img src="/images/projects/brainfuck.png">
+                <div>
+                    <h1>Brainfuck Compiler</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
+
+            <a href="http://hitanshudhawan.com/TapTap/" target="_blank">
+            <div class="container list-item">
+                <!-- <img src=""> -->
+                <div>
+                    <h1>TapTap</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
+
+            <a href="https://github.com/hitanshu-dhawan/DynamicWallpapers" target="_blank">
+            <div class="container list-item">
+                <img src="/images/projects/wallpapers.png">
+                <div>
+                    <h1>Dynamic Wallpapers</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
+
+            <a href="https://github.com/hitanshu-dhawan/BatteryBeep" target="_blank">
+            <div class="container list-item">
+                <img src="/images/projects/laptopcharging.jpg">
+                <div>
+                    <h1>Battery Beep</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
+
+            <a href="https://github.com/hitanshu-dhawan/SudokuSolver" target="_blank">
+            <div class="container list-item">
+                <img src="/images/projects/sudoku.png">
+                <div>
+                    <h1>Sudoku Solver</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            </a>
+
+        </div>
 
         <div id="footer">
             <div class="container centre">
